# aisle-iq

./: .env  .env.example  .gitignore  CHOICES.md  DESIGN.md  README.md  docker-compose.yml  pyproject.toml  requirements-ml.txt  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 0c5b878bb87a_initial_schema.py  8399e992360e_add_global_visitor_matches.py
app/: __init__.py  anomalies.py  config.py  database.py  funnel.py  health.py  heatmap.py  ingestion.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  pos_correlator.py  schemas.py  utils.py
app/routers/: events.py  health.py  metrics_live.py  stores.py  video.py
docker/: Dockerfile.api  Dockerfile.frontend
frontend/: index.html  package-lock.json  package.json
pipeline/: __init__.py  detect.py  emit.py  global_id.py  run.sh  staff.py  state_machine.py  tracker.py  zones.py
scripts/: e2e_demo_ingest.py  generate_test_events.py  ingest_jsonl.py  run_pipeline_and_ingest.py  smoke_test.sh  validate_and_compile_events.py
tests/: conftest.py  test_anomalies.py  test_anomalies_coverage.py  test_assertions.py  test_exception_handlers.py  test_funnel.py  test_health.py  test_heatmap.py  test_ingestion.py  test_ingestion_coverage.py  test_ingestion_pos.py  test_metrics.py  test_metrics_coverage.py  test_new_schema_ingestion.py  test_pipeline.py  test_pipeline_detect_coverage.py  test_pipeline_emit.py  test_pipeline_enhancements.py  test_pipeline_staff.py  test_pipeline_tracker.py  test_pos_correlator_coverage.py  test_reid_global.py  test_routers_and_services_coverage.py
(+19 files in other folders)
